# jot-cli

./: .gitignore  Cargo.toml  GOOGLE_SETUP.md  GOOGLE_TASK_PLAN.md  README.md
src/: google.rs  lib.rs  main.rs  sync.rs
