[package]
name = "jot-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30.2"
crossterm = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
arboard = { version = "3.6.1", default-features = false }
# Google Tasks integration (opt-in via `--features google`).
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
], optional = true }
open = { version = "5", optional = true }

[features]
default = []
# Build with `cargo build --features google` to enable Google Tasks sync.
google = ["dep:reqwest", "dep:open"]
